--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,58 +13,62 @@ body {
     font-size: 1.5em;
     padding: 32px;
     margin-bottom: 0px; }
-  .title main {
-    padding-top: 0 1em;
-    padding-bottom: 0; }
-  .title article {
-    display: flex;
-    flex-wrap: wrap; }
-    .title article article section {
-      flex-grow: 1;
-      flex-basis: 45%;
-      border: 1px #8C8C8C, solid;
-      -webkit-box-shadow: box-shadow;
-      -moz-box-shadow: box-shadow;
-      box-shadow: box-shadow;
-      padding: 16px;
-      margin: 16px;
-      clear: both;
-      overflow: auto;
-      box-sizing: border-box; }
-      .title article article section #selling-points {
-        flex-grow: 2;
-        flex-basis: 100%; }
-  .title article code {
-    background: #000;
-    border: 1px solid #6b717f;
-    color: #FFF;
-    page-break-inside: avoid;
-    font-family: monospace;
-    font-size: 15px;
-    line-height: 1.6;
-    margin-bottom: 1.6em;
-    max-width: 100%;
-    overflow: auto;
-    padding: 1em 1.5em;
-    display: block;
-    word-wrap: break-word; }
-    .title article code.before {
-      float: left;
-      width: 40%; }
-    .title article code.after {
-      float: right;
-      width: 40%; }
-  .title .messages, .title .messages .success, .title .messages .error, .title .messages .error .warning {
+
+main {
+  padding-top: 0 1em;
+  padding-bottom: 0; }
+
+article {
+  display: flex;
+  flex-wrap: wrap; }
+  article article section {
+    flex-grow: 1;
+    flex-basis: 45%;
     border: 1px #8C8C8C, solid;
-    color: #fff;
-    padding: 16px; }
-    .title .messages .success, .title .messages .error .warning .success {
+    -webkit-box-shadow: box-shadow;
+    -moz-box-shadow: box-shadow;
+    box-shadow: box-shadow;
+    padding: 16px;
+    margin: 16px;
+    clear: both;
+    overflow: auto;
+    box-sizing: border-box; }
+    article article section #selling-points {
+      flex-grow: 2;
+      flex-basis: 100%; }
+
+article code {
+  background: #000;
+  border: 1px solid #6b717f;
+  color: #FFF;
+  page-break-inside: avoid;
+  font-family: monospace;
+  font-size: 15px;
+  line-height: 1.6;
+  margin-bottom: 1.6em;
+  max-width: 100%;
+  overflow: auto;
+  padding: 1em 1.5em;
+  display: block;
+  word-wrap: break-word; }
+  article code.before {
+    float: left;
+    width: 40%; }
+  article code.after {
+    float: right;
+    width: 40%; }
+
+.messages, .messages .success, .messages .error, .messages .error .warning {
+  border: 1px #8C8C8C, solid;
+  color: #fff;
+  padding: 16px; }
+  .messages .success, .messages .error .warning .success {
+    background-color: green; }
+  .messages .error, .messages .error .warning .error {
+    background-color: red; }
+    .messages .error:hover {
       background-color: green; }
-    .title .messages .error, .title .messages .error .warning .error {
-      background-color: red; }
-      .title .messages .error:hover {
-        background-color: green; }
-      .title .messages .error .warning {
-        background-color: yellow; }
+    .messages .error .warning {
+      background-color: yellow; }
 
 /*# sourceMappingURL=style.css.map */
